[package]
name = "discovery"
version = "0.1.0"
authors = ["Edward Makhlin"]
edition = "2018"

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
percent-encoding = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.126"
serde_json = "1.0.64"
thiserror = "1.0.25"
ureq = { version = "2.1.1", features = ["json"] }


[profile.dev]
split-debuginfo = "unpacked"